--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-jwt": "^8.4.1",
     "express-validator": "^6.14.3",
     "gravatar": "^1.8.2",
@@ -22,6 +23,7 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
     "util": "^0.12.5"
   },
   "devDependencies": {
